@@ -54,7 +54,8 @@ class UsersModelUser extends JModelForm
 	*/
 	public function &getTable($type = 'User', $prefix = 'JTable', $config = array())
 	{
-		return JTable::getInstance($type, $prefix, $config);
+		$table = JTable::getInstance($type, $prefix, $config);
+		return $table;
 	}
 
 	/**
@@ -97,7 +98,7 @@ class UsersModelUser extends JModelForm
 		JPluginHelper::importPlugin('user');
 
 		// Trigger the data preparation event.
-		$results = $dispatcher->trigger('onPrepareUsersProfileData', array($table->id, &$value));
+		$results = $dispatcher->trigger('onPrepareUserProfileData', array($table->id, &$value));
 
 		// Convert the params field to an array.
 		$registry = new JRegistry;
@@ -131,7 +132,7 @@ class UsersModelUser extends JModelForm
 		JPluginHelper::importPlugin('user');
 
 		// Trigger the form preparation event.
-		$results = $dispatcher->trigger('onPrepareUsersProfileForm', array($this->getState('user.id'), &$form));
+		$results = $dispatcher->trigger('onPrepareUserProfileForm', array($this->getState('user.id'), &$form));
 
 		// Check for errors encountered while preparing the form.
 		if (count($results) && in_array(false, $results, true)) {
